test/parser/types/out_param_multiple_asterisks.yl
// RUN: compiler %s 2>&1 -ast-dump | filecheck %s
// CHECK: [[# @LINE + 1 ]]:11: error: expected type specifier
fn foo(x: &&number, y: &number) {}

fn main() {}
